# maker-panel

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build_wasm.yaml  package.yml
docs/: spec-reference.md
examples/: cam.spec  ex2.spec  ex3.spec  ex4.spec  panel.spec
examples/misc/: 24byj48.spec  ram_55x30.spec  train_base.spec  wall_mount.spec
examples/std/: beam_1x12.spec  beam_2x12.spec  ra_1x2.spec  ral_1x2.spec  t_1x3.2.spec  t_trianglulated_1x3.2.spec
src/: drill.rs  features.rs  gerber.rs  lib.rs  main.rs  parser.rs  tessellate.rs  text.rs
src/features/: array.rs  circle.rs  mechanical_solder_point.rs  named.rs  negative.rs  pos.rs  r_mount.rs  rect.rs  repeating.rs  rotate.rs  screw_hole.rs  smiley.rs  triangle.rs  unit.rs
wasm/: Cargo.toml  build.rs  index.html  shell.nix
wasm/src/: lib.rs  version.rs
