[package]
name = "maker-panel"
description = "Generator for modular mechanical panels"
license = "MIT"
version = "0.12.1"
authors = ["Tom <twitchyliquid64@ciphersink.net>"]
edition = "2018"

[dependencies]
conv = "0.3"
typenum = "1.12"
geo-booleanop = "0.3.2"
geo = "0.16"
usvg = { version = "0.12", default-features = false }
resvg = { version = "0.12", default-features = false }
gerber-types = "0.2"
#{ git = "https://github.com/twitchyliquid64/gerber-types-rs", rev = "e927ed2ff68d9e8629dbc36d5f1e5626da472376" }
structopt = "0.3"
zip = { version = "0.5", default-features = false }
nom = { version = "6", default-features = false, features = ["alloc"] }
dyn-clone = "1.0"
cel-interpreter = "0.2"

lyon = { version = "0.17", optional = true }
stl_io = { version = "0.6", optional = true }

ibm437 = { version = "0.1", optional = true }
embedded-graphics = { version = "0.1", optional = true }
png = { version = "0.16", optional = true }

[features]
default = ["tessellate", "text"]
tessellate = ["lyon", "stl_io"]
text = ["ibm437", "embedded-graphics", "png", "resvg/text", "usvg/text"]

[dev-dependencies]
test-case = "1.0"

[patch.crates-io]
#cel-interpreter = { git = 'https://github.com/orf/cel-rust', branch = 'master' }
#cel-interpreter = { git = 'https://github.com/twitchyliquid64/cel-rust', branch = 'master' }
