[package]
name = "maker-panel-wasm"
version = "0.1.2"
authors = ["Tom <twitchyliquid64@ciphersink.net>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
maker-panel = { path = "../", default-features = false }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
toml = "0.2"
